--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "type": "module",
   "engines": {
-    "node": "20.x || 22.x"
+    "node": "20.x || 22.x || v24.11.0" 
   },
   "scripts": {
     "start": "node index.js",
